Adjusted title to design layout

--- a/cienciasalud/bluetheme/static/styles.css
+++ b/cienciasalud/bluetheme/static/styles.css
@@ -548,3 +548,10 @@ dl.portlet dd.portletItem, dl.portlet dd.portletFooter, dl.portletError dd {
 #colone dl.portlet a:link {
     border: none;
 }
+#page.item dl.portlet {
+    margin-left: 40px;
+}
+.item #parent-fieldname-title {
+    font-size: 23px;
+    color: #336699;
+}
