--- a/cienciasalud/bluetheme/static/styles.css
+++ b/cienciasalud/bluetheme/static/styles.css
@@ -467,6 +467,17 @@ img.right {
 #colone > div > img {
     float: left;
 }
+.home #colone > div > img {
+    float: none;
+    display: block;
+    margin: 0 auto;
+}
+.home #colone > div > h2 {
+    text-align: center;
+}
+.home #colone > div > h2 a {
+    color: #336699;
+}
 #colone > div > h2, .portletWrapper h2, .portletWrapper .portletHeader a span {
     font-size: 12px; font-weight: bold;
     text-transform: uppercase;
