--- a/cienciasalud/bluetheme/static/styles.css
+++ b/cienciasalud/bluetheme/static/styles.css
@@ -475,7 +475,7 @@ img.right {
 .home #colone > div > h2 {
     text-align: center;
 }
-.home #colone > div > h2 a {
+#colone > div > h2 a {
     color: #336699;
 }
 #colone > div > h2, .portletWrapper h2, .portletWrapper .portletHeader a span {
