--- a/cienciasalud/bluetheme/static/styles.css
+++ b/cienciasalud/bluetheme/static/styles.css
@@ -451,10 +451,13 @@ img.right {
     background-color: #3a7ca6;
     padding: 10px 5px;
 }
-#content .tileHeadline {
+#content .tileHeadline, .newsMainStory h1 {
     line-height: 1.2em;
     font-size: 27px;
     font-weight: bold;
+}
+.newsMainStory a {
+    border: none;
 }
 #content .tileBody {
     line-height: 1.35em;
